changed html filename from .html.tera to .html

--- a/webapp/rust/template/add_channel.html
+++ b/webapp/rust/template/add_channel.html
@@ -1,4 +1,4 @@
-{% include 'header.html.tera' %}
+{% include 'header.html' %}
 <form action="/add_channel" method="post">
   <div class="form-group row">
     <label for="inputname" class="col-sm-2 col-form-label">チャンネル名</label>
@@ -14,4 +14,4 @@
   </div>
   <button type="submit" class="btn btn-primary">登録</button>
 </form>
-{% include 'footer.html.tera' %}
+{% include 'footer.html' %}
